--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,24 +3,43 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_show_times">ShowTimes</string>
 
-    <!--.............................HOME SCREEN STRINGS.......................................-->
+    <!--......................................HOME SCREEN STRINGS..........................................................-->
     <string name="home_screen_new">Create New Meal</string>
     <string name="home_screen_load">Load Last Meal</string>
     <string name="no_upcoming_alarms">No Upcoming Reminders</string>
     <string name="title_activity_upcoming_alarms">Upcoming Reminders</string>
     <string name="hold_to_update">Long hold to edit items</string>
     <string name="upcoming_reminders">Upcoming Reminders</string>
+    <string name="get_recent_timings">Show Recent Timings</string>
+    <string name="upgrade">Upgrade To Pro</string>
+    <string name="show_saved_meals_menu_item">Show Saved Meals</string>
+    <string name="load_or_view_meal">Load/View Saved Meal</string>
 
 
-    <!--.............................ADD ITEM SCREEN STRINGS.......................................-->
+    <!--......................................ADD ITEM SCREEN STRINGS........................................................-->
     <string name="item_screen_banner_ad">ca-app-pub-3940256099942544/6300978111</string> <!--TODO - CHANGE TO PROPER AD KEY -->
     <string name="no_food_item_found">Please add at least one food item</string>
     <string name="no_previous_meal">No previous meal found</string>
+    <string name="add_item">Add Item</string>
+    <string name="add">Add Item</string>
     <string name="name_no_pipe">Name can\'t contain the pipe character \'|\'</string>
     <string name="no_name_time">Please enter a name and cooking time</string>
     <string name="food_not_ready_on_time">Food can\'t be ready at this time\nPlease select a different time/date</string>
+    <string name="new_item_name">Item Name</string>
+    <string name="new_item_prep_time">Preparation Time</string>
+    <string name="new_item_cook_time">Cooking Time</string>
+    <string name="cancel">Cancel</string>
+    <string name="stage_name">Name (e.g. Prep/Cook)</string>
+    <string name="time">Time</string>
+    <string name="delete">Delete</string>
+    <string name="add_stage">Add Stage</string>
+    <string name="stages">Stages</string>
+    <string name="drag_to_reorder">Drag To Reorder</string>
+    <string name="lv_stage_name">Stage Name</string>
+    <string name="cont">Continue</string>
 
-    <!-- ....................   CHOOSE READY TIME DIALOG STRINGS    ...........................-->
+
+    <!-- .................................CHOOSE READY TIME DIALOG STRINGS.................................................-->
     <string name="chooseReadyTimeTitle">Choose Meal Time</string>
     <string name="haveFoodReadyAt">Have Food\nReady At:</string>
     <string name="foodReadyAt">Food Will Be Ready At: </string>
@@ -29,9 +48,26 @@
     <string name="reminders">Reminders</string>
     <string name="showTimings">Show Times</string>
 
-    <!--...........................TIMINGS PAGE STRINGS........................................-->
+    <!--..........................................TIMINGS PAGE STRINGS.......................................................-->
     <string name="timing_screen_banner_ad">ca-app-pub-3940256099942544/6300978111</string> <!--TODO - CHANGE TO PROPER AD KEY -->
     <string name="minutes">mins</string>
+    <string name="reminders_set">Reminders Set</string>
+    <string name="save_meal">Save Meal</string>
+    <string name="meal_notes_hint">Notes (e.g recipe book / oven temperature)</string>
+    <string name="meal_name_hint">Meal Name</string>
 
+
+    <!--............................................UPDATE PAGE STRINGS........................................................-->
+    <string name="title_activity_upgrade_screen">Upgrade To Ad Free</string>
+    <string name="status">Current Status: </string>
+    <string name="title_activity_saved_meals">SavedMeals</string>
+
+
+    <!--............................................SAVED MEALS PAGE.............................................................-->
+    <string name="saved_meal_tile">Saved Meals</string>
+    <string name="edit_meal">Edit Meal</string>
+    <string name="load_meal">Load Meal</string>
+    <string name="delete_meal">Delete Meal</string>
+    <string name="no_meals_found">No Meals Found!</string>
 
 </resources>
