--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Cooking Scheduler</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_show_times">ShowTimes</string>
+    <string name="admob_app_id">ca-app-pub-5961771507160254~8394869128</string>
 
     <!--......................................HOME SCREEN STRINGS..........................................................-->
     <string name="home_screen_new">Create New Meal</string>
@@ -19,7 +20,7 @@
 
 
     <!--......................................ADD ITEM SCREEN STRINGS........................................................-->
-    <string name="item_screen_banner_ad">ca-app-pub-3940256099942544/6300978111</string> <!--TODO - CHANGE TO PROPER AD ID -->
+    <string name="item_screen_banner_ad">ca-app-pub-5961771507160254/5904314720</string>
     <string name="no_food_item_found">Please add at least one food item</string>
     <string name="no_previous_meal">No previous meal found</string>
     <string name="add_item">Add Item</string>
@@ -57,22 +58,30 @@
     <string name="override_warning">Continuing will override previous meal timings\n(reminders unaffected)</string>
 
     <!--..........................................TIMINGS PAGE STRINGS.......................................................-->
-    <string name="timing_screen_banner_ad">ca-app-pub-3940256099942544/6300978111</string> <!--TODO - CHANGE TO PROPER AD ID -->
-    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string> <!--TODO - CHANGE TO PROPER AD ID -->
+    <string name="timing_screen_banner_ad">ca-app-pub-5961771507160254/7381047921</string>
+    <string name="interstitial_ad_unit_id">ca-app-pub-5961771507160254/2000635521</string>
     <string name="minutes">mins</string>
     <string name="reminders_set">Reminders Set</string>
     <string name="save_meal">Save Meal</string>
     <string name="meal_notes_hint">Notes (e.g recipe book / oven temperature)</string>
     <string name="meal_name_hint">Meal Name</string>
     <string name="finished">Finished</string>
+    <string name="food_ready_at">Food will be ready at</string>
+    <string name="start_cooking_at">Start At:</string>
+    <string name="what_to_cook">What To Do:</string>
+    <string name="error_deleting_reminder">Error Deleting Reminder</string>
+    <string name="reminder_deleted">Reminder Deleted</string>
+    <string name="enter_meal_name">Please enter a name for the meal</string>
 
 
-    <!--............................................UPDATE PAGE STRINGS........................................................-->
+    <!--............................................UPGRADE PAGE STRINGS........................................................-->
     <string name="title_activity_upgrade_screen">Upgrade To Ad Free</string>
     <string name="status">Current Status: </string>
     <string name="title_activity_saved_meals">SavedMeals</string>
     <string name="free"> FREE</string>
     <string name="upgraded"> UPGRADED</string>
+    <string name="pro_benefits">Benefits of Pro:</string>
+    <string name="benefits">- Save meals for repeated use\n- No adverts</string>
 
 
     <!--............................................SAVED MEALS PAGE.............................................................-->
@@ -80,5 +89,6 @@
     <string name="load_meal">Load/Edit Meal</string>
     <string name="delete_meal">Delete Meal</string>
     <string name="no_meals_found">No Meals Found!</string>
+
 
 </resources>
